# bedrock-multimodal-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
examples/: legal_contracts.md  real_estate.md  support_kb.md
src/bedrock_rag/: bedrock_client.py  eval.py  retrieval.py
tests/: test_bedrock_client.py  test_eval.py  test_retrieval.py
