[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-multimodal-rag"
version = "0.1.0"
description = "Multimodal RAG on AWS Bedrock — text + image retrieval with pgvector and a real evaluator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "boto3>=1.34.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.4",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
    "click>=8.1.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[project.scripts]
bedrock-rag = "bedrock_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
